...
import UIKit

struct CityWeatherControllerIdentifiers {
  static let cityWeatherCell = "cityWeatherCell"
  static let cityWeatherHeaderCell = "cityWeatherHeaderCell"
  static let cityWeatherGenricCell = "cityWeatherGenricCell"
  static let cityWeatherTableIdentifer = "weather_tableView"
}

struct CityWeatherControllerStrings {
  static let humidityValue = " %@%%"
  static let humidityTitle = "Humidity:"
  static let currentTemperatureValue = " %@"
...
  static let weatherHeader = "Weather"
  static let temperatureHeader = "Temperature"
  static let windHeader = "Wind"
  static let visibilityHeader = "Visibility"


  static let  alertCancelActionButtonTitle = "Cancel"
  static let  alertTryAgainActionButtonTitle = "Try Again"
  static let  alertGenricMessage = "We’re having some unexpected trouble getting this info for you right now."
  static let  alertSearchErrorTitle = "Unable to get weather report for %@"
}


...
